@@ -36,7 +36,6 @@
 package org.eclipse.daanse.olap.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.daanse.olap.api.CatalogReader;
@@ -193,7 +192,7 @@ public class IdentifierParser extends org.eclipse.daanse.olap.impl.IdentifierPar
         public MemberListBuilder(
             CatalogReader schemaReader, Cube cube, Hierarchy hierarchy)
         {
-            super(schemaReader, cube, Collections.singletonList(hierarchy));
+            super(schemaReader, cube, List.of(hierarchy));
         }
 
         @Override
